@@ -1,3 +1,8 @@
+2004-07-15  Karl Runge <runge@karlrunge.com>
+	* make "modtweak" the default, disable with -nomodtweak.  this
+	  corrects ghost "< >" key on pc104 us in XFree86.
+	* fix bug wrt no got_keyboard_input under modtweak
+
 2004-07-10  Karl Runge <runge@karlrunge.com>
 	* -norepeat to turn off X server autorepeat when clients exist,
 	  (this is workaround for the repeating keystroke bug.  Note that
